[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
shuttle-axum = "0.49"
shuttle-runtime = "0.49"
tokio = "1.28.2"
serde = { version = "1", features = ["derive"] }
itertools = "0.13"
toml = "0.8"
cargo-manifest = "0.17"
