[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
shuttle-axum = "0.49"
shuttle-runtime = "0.49"
shuttle-shared-db = { version = "0.49", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8", features = ["uuid", "chrono"] }
tokio = "1.28.2"
serde = { version = "1", features = ["derive"] }
itertools = "0.13"
toml = "0.8"
serde_yaml = "0.9"
serde_json = "1"
cargo-manifest = "0.17"
tower-http = { version = "0.6", features = ["trace", "fs"] }
tracing = "0.1"
rand = "0.8"
jsonwebtoken = "9"
